crates/alder-parse/src/snapshots/alder_parse__style__tests__style_binop_value.snap
---
source: crates/alder-parse/src/style.rs
description: "style { width: base * 2 }"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 26,
        },
    },
    value: Style(
        Style {
            entries: [
                StyleEntry {
                    key: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 9,
                            },
                            end: Position {
                                line: 1,
                                column: 14,
                            },
                        },
                        value: Ident(
                            "width",
                        ),
                    },
                    value: Expr(
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 16,
                                },
                                end: Position {
                                    line: 1,
                                    column: 24,
                                },
                            },
                            value: BinOps {
                                operands: [
                                    BinOpOperand {
                                        expr: Located {
                                            region: Region {
                                                start: Position {
                                                    line: 1,
                                                    column: 16,
                                                },
                                                end: Position {
                                                    line: 1,
                                                    column: 20,
                                                },
                                            },
                                            value: Var(
                                                "base",
                                            ),
                                        },
                                        op: Located {
                                            region: Region {
                                                start: Position {
                                                    line: 1,
                                                    column: 21,
                                                },
                                                end: Position {
                                                    line: 1,
                                                    column: 22,
                                                },
                                            },
                                            value: Mul,
                                        },
                                    },
                                ],
                                last: Located {
                                    region: Region {
                                        start: Position {
                                            line: 1,
                                            column: 23,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 24,
                                        },
                                    },
                                    value: Number(
                                        NumberLit {
                                            value: 2.0,
                                            text: "2",
                                        },
                                    ),
                                },
                            },
                        },
                    ),
                },
            ],
        },
    ),
}
