crates/alder-parse/src/snapshots/alder_parse__style__tests__style_call_value.snap
---
source: crates/alder-parse/src/style.rs
description: "style { color: rgb(0, 0, 0) }"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 30,
        },
    },
    value: Style(
        Style {
            entries: [
                StyleEntry {
                    key: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 9,
                            },
                            end: Position {
                                line: 1,
                                column: 14,
                            },
                        },
                        value: Ident(
                            "color",
                        ),
                    },
                    value: Expr(
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 16,
                                },
                                end: Position {
                                    line: 1,
                                    column: 28,
                                },
                            },
                            value: Call {
                                function: Located {
                                    region: Region {
                                        start: Position {
                                            line: 1,
                                            column: 16,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 19,
                                        },
                                    },
                                    value: Var(
                                        "rgb",
                                    ),
                                },
                                arguments: [
                                    Located {
                                        region: Region {
                                            start: Position {
                                                line: 1,
                                                column: 20,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 21,
                                            },
                                        },
                                        value: Number(
                                            NumberLit {
                                                value: 0.0,
                                                text: "0",
                                            },
                                        ),
                                    },
                                    Located {
                                        region: Region {
                                            start: Position {
                                                line: 1,
                                                column: 23,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 24,
                                            },
                                        },
                                        value: Number(
                                            NumberLit {
                                                value: 0.0,
                                                text: "0",
                                            },
                                        ),
                                    },
                                    Located {
                                        region: Region {
                                            start: Position {
                                                line: 1,
                                                column: 26,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 27,
                                            },
                                        },
                                        value: Number(
                                            NumberLit {
                                                value: 0.0,
                                                text: "0",
                                            },
                                        ),
                                    },
                                ],
                            },
                        },
                    ),
                },
            ],
        },
    ),
}
