crates/alder-parse/src/snapshots/alder_parse__style__tests__style_dangling_exponent_is_dimension.snap
---
source: crates/alder-parse/src/style.rs
description: "style { a: 1e }"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 16,
        },
    },
    value: Style(
        Style {
            entries: [
                StyleEntry {
                    key: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 9,
                            },
                            end: Position {
                                line: 1,
                                column: 10,
                            },
                        },
                        value: Ident(
                            "a",
                        ),
                    },
                    value: Dimension {
                        number: NumberLit {
                            value: 1.0,
                            text: "1",
                        },
                        unit: "e",
                    },
                },
            ],
        },
    ),
}
