crates/alder-parse/src/snapshots/alder_parse__style__tests__style_empty.snap
---
source: crates/alder-parse/src/style.rs
description: "style {}"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 9,
        },
    },
    value: Style(
        Style {
            entries: [],
        },
    ),
}
