crates/alder-parse/src/snapshots/alder_parse__style__tests__style_exponent_unitless.snap
---
source: crates/alder-parse/src/style.rs
description: "style { a: 1e5 }"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 17,
        },
    },
    value: Style(
        Style {
            entries: [
                StyleEntry {
                    key: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 9,
                            },
                            end: Position {
                                line: 1,
                                column: 10,
                            },
                        },
                        value: Ident(
                            "a",
                        ),
                    },
                    value: Expr(
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 12,
                                },
                                end: Position {
                                    line: 1,
                                    column: 15,
                                },
                            },
                            value: Number(
                                NumberLit {
                                    value: 100000.0,
                                    text: "1e5",
                                },
                            ),
                        },
                    ),
                },
            ],
        },
    ),
}
