crates/alder-parse/src/snapshots/alder_parse__style__tests__style_expr_value.snap
---
source: crates/alder-parse/src/style.rs
description: "style { color: theme.text }"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 28,
        },
    },
    value: Style(
        Style {
            entries: [
                StyleEntry {
                    key: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 9,
                            },
                            end: Position {
                                line: 1,
                                column: 14,
                            },
                        },
                        value: Ident(
                            "color",
                        ),
                    },
                    value: Expr(
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 16,
                                },
                                end: Position {
                                    line: 1,
                                    column: 26,
                                },
                            },
                            value: Access {
                                record: Located {
                                    region: Region {
                                        start: Position {
                                            line: 1,
                                            column: 16,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 21,
                                        },
                                    },
                                    value: Var(
                                        "theme",
                                    ),
                                },
                                field: Located {
                                    region: Region {
                                        start: Position {
                                            line: 1,
                                            column: 22,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 26,
                                        },
                                    },
                                    value: "text",
                                },
                            },
                        },
                    ),
                },
            ],
        },
    ),
}
