crates/alder-parse/src/snapshots/alder_parse__style__tests__style_float_dimension.snap
---
source: crates/alder-parse/src/style.rs
description: "style { lineHeight: 1.5rem }"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 29,
        },
    },
    value: Style(
        Style {
            entries: [
                StyleEntry {
                    key: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 9,
                            },
                            end: Position {
                                line: 1,
                                column: 19,
                            },
                        },
                        value: Ident(
                            "lineHeight",
                        ),
                    },
                    value: Dimension {
                        number: NumberLit {
                            value: 1.5,
                            text: "1.5",
                        },
                        unit: "rem",
                    },
                },
            ],
        },
    ),
}
